tests/paczka2/big_fuzzy/65929397.err
Error in line 1: SwhWq5Ma S347 51,5
Error in line 17: LBS S347 47,7
Error in line 15: jDe S347 65,4
Error in line 32: jDe S798 15,70
Error in line 38: 0lXM2 A670 78,8
Error in line 63: LBS S798 64,97
Error in line 59: LBS S798 87,6
Error in line 72: S347 S798 10,0
Error in line 73: jDe S347 45,1
Error in line 85: jDe S347 79,6
Error in line 89: S347 A670 56,8
Error in line 92: S347 S798 64,3
Error in line 94: S347 S995 61,4
Error in line 103: S347 S798 87,4
Error in line 134: SwhWq5Ma A670 U97,9
Error in line 133: gMdBQsn S798 43,8
Error in line 144: 0lXM2 S995 -2,1
Error in line 137: 0lXM2 S995 96,6
Error in line 123: SwhWq5Ma A670 95,6
Error in line 138: S347 S995 3,2
Error in line 153: zGLM4r9H7j S798 49,1
Error in line 163: SwhWq5Ma S798 230,8
Error in line 152: jDe S995 82,3
Error in line 175: zGLM4r9H7j S995 79,5
Error in line 184: gMdBQsn S798 16,9
Error in line 183: 0lXM2 S995 76,1
Error in line 193: gMdBQsn A670 23,2
Error in line 212: zGLM4r9H7j S347 998,3
Error in line 216: zGLM4r9H7j A670 73,8
Error in line 214: S347 A670 413,1
Error in line 213: LBS S347 96,0
Error in line 220: S347 S798 75,9
Error in line 233: 0lXM S347 ,6
Error in line 224: 0lXM2 A670 27,5
Error in line 229: SwhWq5Ma S798 12,7
Error in line 226: gMdBQsn S995 17,3
